# word_counter

./: CMakeLists.txt  DownloadProject.cmake  README.txt  main.cpp
src/: CMakeLists.txt  WordCounterUtils.cpp  WordCounterUtils.h  main.cpp
src/exceptions/: OpenFileException.cpp
unit-test/: ABBA.txt  CMakeLists.txt  unit-test.cpp
word_counter/: CMakeLists.txt  word_counter.cpp  word_counter.h
